--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: abdelalidocker/nginx-k8s
         ports:
         - containerPort: 80
         
